--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "type": "module",
   "devDependencies": {
-    "vitepress": "npm:@brc-dd/vitepress@1.0.0-dev.4d35ae5",
-    "vue": "^3.2.39"
+    "vitepress": "npm:@brc-dd/vitepress@next",
+    "vue": "latest"
   }
 }
